Address code review comments from PR 123618